[gd_scene load_steps=68 format=2]

[ext_resource path="res://Table/OppositeDropArea.gd" type="Script" id=1]
[ext_resource path="res://Table/PlayerAction.gd" type="Script" id=2]
[ext_resource path="res://Table/RightDropArea.gd" type="Script" id=3]
[ext_resource path="res://Table/LeftHand.gd" type="Script" id=4]
[ext_resource path="res://Table/RightHand.gd" type="Script" id=5]
[ext_resource path="res://Table/Table.gd" type="Script" id=6]
[ext_resource path="res://Table/Timer.gd" type="Script" id=7]
[ext_resource path="res://Table/OppositeHand.gd" type="Script" id=8]
[ext_resource path="res://Asset/Timer/TimerBottom.png" type="Texture" id=9]
[ext_resource path="res://Asset/Timer/TimerRight.png" type="Texture" id=10]
[ext_resource path="res://Asset/Button/PlayerAction/ActionPass.png" type="Texture" id=11]
[ext_resource path="res://Asset/Timer/TimerLeft.png" type="Texture" id=12]
[ext_resource path="res://Asset/Timer/TimerBackground.png" type="Texture" id=13]
[ext_resource path="res://Asset/Timer/TimerOpposite.png" type="Texture" id=14]
[ext_resource path="res://Asset/Button/PlayerAction/ActionChow.png" type="Texture" id=15]
[ext_resource path="res://Asset/Button/PlayerAction/ActionKong.png" type="Texture" id=16]
[ext_resource path="res://Asset/Button/PlayerAction/ActionWin.png" type="Texture" id=17]
[ext_resource path="res://Asset/TableBackground.png" type="Texture" id=18]
[ext_resource path="res://Asset/Button/PlayerAction/ActionPong.png" type="Texture" id=19]
[ext_resource path="res://Table/BottomDropArea.gd" type="Script" id=20]
[ext_resource path="res://Table/BottomHand.gd" type="Script" id=21]
[ext_resource path="res://Table/LeftDropArea.gd" type="Script" id=22]
[ext_resource path="res://Table/BottomShown.gd" type="Script" id=23]
[ext_resource path="res://Table/OppoShown.gd" type="Script" id=24]
[ext_resource path="res://Table/LeftShown.gd" type="Script" id=25]
[ext_resource path="res://Table/RightShown.gd" type="Script" id=26]
[ext_resource path="res://Table/LeftChow.gd" type="Script" id=27]
[ext_resource path="res://Table/MidChow.gd" type="Script" id=28]
[ext_resource path="res://Table/RightChow.gd" type="Script" id=29]
[ext_resource path="res://Table/ChowPanel.gd" type="Script" id=30]
[ext_resource path="res://Asset/Audio/BGM/BGM1.ogg" type="AudioStream" id=31]
[ext_resource path="res://Asset/Button/RoomControl/Ready.png" type="Texture" id=32]
[ext_resource path="res://Asset/Button/RoomControl/Mute.png" type="Texture" id=33]
[ext_resource path="res://Asset/Button/RoomControl/Sound.png" type="Texture" id=34]
[ext_resource path="res://Asset/Button/RoomControl/Music.png" type="Texture" id=35]
[ext_resource path="res://Asset/Button/RoomControl/MusicMute.png" type="Texture" id=36]
[ext_resource path="res://Asset/Label/Ready.png" type="Texture" id=37]
[ext_resource path="res://Asset/Label/Banker.png" type="Texture" id=38]
[ext_resource path="res://Asset/Label/Offline.png" type="Texture" id=39]
[ext_resource path="res://Asset/Avatar/Male.png" type="Texture" id=40]
[ext_resource path="res://Asset/Font/SourceHanSansSC-Normal.otf" type="DynamicFontData" id=41]
[ext_resource path="res://Table/BottomAvatar.gd" type="Script" id=42]
[ext_resource path="res://Table/ChatField.gd" type="Script" id=43]
[ext_resource path="res://Asset/Input/InputChat.png" type="Texture" id=44]
[ext_resource path="res://Asset/Button/General/SendButton.png" type="Texture" id=45]
[ext_resource path="res://Asset/Chat/LeftChat.png" type="Texture" id=46]
[ext_resource path="res://Table/LeftAvatar.gd" type="Script" id=47]
[ext_resource path="res://Asset/Chat/RightChat.png" type="Texture" id=48]
[ext_resource path="res://Table/RightAvatar.gd" type="Script" id=49]
[ext_resource path="res://Asset/Chat/OppoChat.png" type="Texture" id=50]
[ext_resource path="res://Table/OppoAvatar.gd" type="Script" id=51]
[ext_resource path="res://Asset/PopupBackground.png" type="Texture" id=52]
[ext_resource path="res://Table/PopupPanel.gd" type="Script" id=53]
[ext_resource path="res://Asset/Button/General/Confirm.png" type="Texture" id=54]
[ext_resource path="res://Asset/Tile/OppositeHand.png" type="Texture" id=56]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 41 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 41 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 41 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 41 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 44 )
region_rect = Rect2( 0, 0, 660, 60 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 41 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 52 )
region_rect = Rect2( 0, 0, 640, 569 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 41 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 52 )
region_rect = Rect2( 0, 0, 640, 569 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 41 )

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/ExitButton.png-90bb905636ba19a1a2935f9c69eb1cf7.stex"

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 41 )

[node name="Table" type="Node2D"]
script = ExtResource( 6 )

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
autoplay = true
bus = "BGM"

[node name="ActionPlayer" type="AudioStreamPlayer" parent="."]
bus = "Effect"

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="TextureRect" parent="."]
margin_right = 132.0
margin_bottom = 131.0
texture = ExtResource( 13 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLeft" type="TextureRect" parent="Timer"]
visible = false
margin_left = -164.0
margin_top = -174.0
margin_right = 40.0
margin_bottom = 251.0
texture = ExtResource( 12 )

[node name="TimerRight" type="TextureRect" parent="Timer"]
visible = false
margin_left = 94.0
margin_top = -173.0
margin_right = 298.0
margin_bottom = 252.0
texture = ExtResource( 10 )

[node name="TimerOpposite" type="TextureRect" parent="Timer"]
visible = false
margin_left = -119.0
margin_top = -166.0
margin_right = 303.0
margin_bottom = 35.0
texture = ExtResource( 14 )

[node name="TimerBottom" type="TextureRect" parent="Timer"]
visible = false
margin_left = -122.0
margin_top = 92.0
margin_right = 304.0
margin_bottom = 295.0
texture = ExtResource( 9 )

[node name="OppositeHand" type="Node2D" parent="."]
position = Vector2( 896.551, 142.818 )
script = ExtResource( 8 )

[node name="OppoShown" type="Node2D" parent="."]
position = Vector2( 1573.25, 148.362 )
script = ExtResource( 24 )

[node name="OppositeDropArea" type="Node2D" parent="."]
position = Vector2( 1222.13, 256.318 )
script = ExtResource( 1 )

[node name="LeftHand" type="Node2D" parent="."]
position = Vector2( 163.816, 336.905 )
script = ExtResource( 4 )

[node name="LeftShown" type="Node2D" parent="."]
position = Vector2( 256.542, 126.726 )
script = ExtResource( 25 )

[node name="LeftDropArea" type="Node2D" parent="."]
position = Vector2( 383.452, 332.188 )
script = ExtResource( 22 )

[node name="RightHand" type="Node2D" parent="."]
position = Vector2( 1805.06, 383.268 )
script = ExtResource( 5 )

[node name="RightShown" type="Node2D" parent="."]
position = Vector2( 1718.52, 856.17 )
script = ExtResource( 26 )

[node name="RightDropArea" type="Node2D" parent="."]
position = Vector2( 1570.72, 658.225 )
script = ExtResource( 3 )

[node name="BottomDropArea" type="Node2D" parent="."]
position = Vector2( 621.315, 779.207 )
script = ExtResource( 20 )

[node name="BottomShown" type="Node2D" parent="."]
position = Vector2( 92.726, 914.896 )
script = ExtResource( 23 )

[node name="BottomHand" type="Node2D" parent="."]
script = ExtResource( 21 )

[node name="PlayerAction" type="HBoxContainer" parent="."]
visible = false
margin_left = 1054.08
margin_top = 690.079
margin_right = 1819.08
margin_bottom = 805.079
custom_constants/separation = 10
alignment = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chow" type="TextureButton" parent="PlayerAction"]
margin_right = 145.0
margin_bottom = 115.0
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pong" type="TextureButton" parent="PlayerAction"]
margin_left = 155.0
margin_right = 300.0
margin_bottom = 115.0
texture_normal = ExtResource( 19 )

[node name="Kong" type="TextureButton" parent="PlayerAction"]
margin_left = 310.0
margin_right = 455.0
margin_bottom = 115.0
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="TextureButton" parent="PlayerAction"]
margin_left = 465.0
margin_right = 610.0
margin_bottom = 115.0
texture_normal = ExtResource( 17 )

[node name="Cancel" type="TextureButton" parent="PlayerAction"]
margin_left = 620.0
margin_right = 765.0
margin_bottom = 115.0
texture_normal = ExtResource( 11 )

[node name="ChowPanel" type="Node2D" parent="."]
visible = false
position = Vector2( 684.956, 530.841 )
script = ExtResource( 30 )

[node name="LeftChow" type="Node2D" parent="ChowPanel"]
script = ExtResource( 27 )

[node name="MidChow" type="Node2D" parent="ChowPanel"]
script = ExtResource( 28 )

[node name="RightChow" type="Node2D" parent="ChowPanel"]
script = ExtResource( 29 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestButtons" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 76.0
margin_bottom = 37.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer/TestButtons"]
margin_right = 76.0
margin_bottom = 37.0
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 45.0
margin_right = 1377.0
margin_bottom = 82.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 111.0
margin_bottom = 37.0
text = "Add Tile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 261.0
margin_bottom = 37.0
text = "Add to Left"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 269.0
margin_right = 465.0
margin_bottom = 37.0
text = "Add to Oppotite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 473.0
margin_right = 610.0
margin_bottom = 37.0
text = "RightHand"

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 618.0
margin_right = 777.0
margin_bottom = 37.0
text = "BottomDrop"

[node name="Button6" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 785.0
margin_right = 904.0
margin_bottom = 37.0
text = "LeftDrop"

[node name="Button7" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 912.0
margin_right = 1045.0
margin_bottom = 37.0
text = "RightDrop"

[node name="Button8" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1053.0
margin_right = 1191.0
margin_bottom = 37.0
text = "OppoDrop"

[node name="Button9" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1199.0
margin_right = 1377.0
margin_bottom = 37.0
text = "BottomShown"

[node name="ReadyButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 842.0
margin_top = 614.0
margin_right = 1078.0
margin_bottom = 713.0
texture_normal = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButtons" type="HBoxContainer" parent="."]
margin_left = 1509.08
margin_top = 35.0
margin_right = 1815.08
margin_bottom = 163.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="ControlButtons"]
margin_right = 128.0
margin_bottom = 128.0
toggle_mode = true
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 36 )

[node name="SoundButton" type="TextureButton" parent="ControlButtons"]
margin_left = 178.0
margin_right = 306.0
margin_bottom = 128.0
toggle_mode = true
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 33 )

[node name="BottomAvatar" type="HBoxContainer" parent="."]
margin_top = 908.896
margin_right = 127.0
margin_bottom = 1139.9
script = ExtResource( 42 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarContainer" type="VBoxContainer" parent="BottomAvatar"]
margin_right = 75.0
margin_bottom = 231.0

[node name="Avatar" type="TextureRect" parent="BottomAvatar/AvatarContainer"]
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 40 )

[node name="Nickname" type="Label" parent="BottomAvatar/AvatarContainer"]
margin_top = 83.0
margin_right = 75.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "昵称"
align = 1

[node name="StateContainer" type="VBoxContainer" parent="BottomAvatar"]
margin_left = 83.0
margin_right = 119.0
margin_bottom = 231.0

[node name="BankerIcon" type="TextureRect" parent="BottomAvatar/StateContainer"]
margin_right = 36.0
margin_bottom = 37.0
texture = ExtResource( 38 )

[node name="ReadyIcon" type="TextureRect" parent="BottomAvatar/StateContainer"]
visible = false
margin_top = 85.0
margin_right = 88.0
margin_bottom = 131.0
texture = ExtResource( 37 )

[node name="OfflineIcon" type="TextureRect" parent="BottomAvatar/StateContainer"]
visible = false
margin_top = 45.0
margin_right = 88.0
margin_bottom = 77.0
rect_min_size = Vector2( 88, 32 )
texture = ExtResource( 39 )
expand = true

[node name="RightAvatar" type="HBoxContainer" parent="."]
visible = false
margin_left = 1492.0
margin_top = 383.0
margin_right = 1916.0
margin_bottom = 614.0
alignment = 2
script = ExtResource( 49 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="TextureRect" parent="RightAvatar"]
visible = false
margin_right = 297.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 48 )
expand = true

[node name="Label" type="Label" parent="RightAvatar/Chat"]
margin_left = 17.08
margin_top = 23.0
margin_right = 260.08
margin_bottom = 154.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarContainer" type="VBoxContainer" parent="RightAvatar"]
margin_left = 305.0
margin_right = 380.0
margin_bottom = 231.0

[node name="Avatar" type="TextureRect" parent="RightAvatar/AvatarContainer"]
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 40 )

[node name="Nickname" type="Label" parent="RightAvatar/AvatarContainer"]
margin_top = 83.0
margin_right = 75.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "昵称"
align = 1

[node name="StateContainer" type="VBoxContainer" parent="RightAvatar"]
margin_left = 388.0
margin_right = 424.0
margin_bottom = 231.0

[node name="BankerIcon" type="TextureRect" parent="RightAvatar/StateContainer"]
margin_right = 36.0
margin_bottom = 37.0
texture = ExtResource( 38 )

[node name="ReadyIcon" type="TextureRect" parent="RightAvatar/StateContainer"]
visible = false
margin_top = 85.0
margin_right = 88.0
margin_bottom = 131.0
texture = ExtResource( 37 )

[node name="OfflineIcon" type="TextureRect" parent="RightAvatar/StateContainer"]
visible = false
margin_top = 45.0
margin_right = 88.0
margin_bottom = 77.0
rect_min_size = Vector2( 88, 32 )
texture = ExtResource( 39 )
expand = true

[node name="Timer" type="Timer" parent="RightAvatar"]
wait_time = 2.0
one_shot = true

[node name="OppoAvatar" type="HBoxContainer" parent="."]
visible = false
margin_left = 833.0
margin_top = 35.0
margin_right = 1320.0
margin_bottom = 266.0
script = ExtResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarContainer" type="VBoxContainer" parent="OppoAvatar"]
margin_right = 75.0
margin_bottom = 231.0

[node name="Avatar" type="TextureRect" parent="OppoAvatar/AvatarContainer"]
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 40 )

[node name="Nickname" type="Label" parent="OppoAvatar/AvatarContainer"]
margin_top = 83.0
margin_right = 75.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "昵称"
align = 1

[node name="StateContainer" type="VBoxContainer" parent="OppoAvatar"]
margin_left = 83.0
margin_right = 119.0
margin_bottom = 231.0

[node name="BankerIcon" type="TextureRect" parent="OppoAvatar/StateContainer"]
margin_right = 36.0
margin_bottom = 37.0
texture = ExtResource( 38 )

[node name="ReadyIcon" type="TextureRect" parent="OppoAvatar/StateContainer"]
visible = false
margin_top = 85.0
margin_right = 88.0
margin_bottom = 131.0
texture = ExtResource( 37 )

[node name="OfflineIcon" type="TextureRect" parent="OppoAvatar/StateContainer"]
visible = false
margin_top = 45.0
margin_right = 88.0
margin_bottom = 77.0
rect_min_size = Vector2( 88, 32 )
texture = ExtResource( 39 )
expand = true

[node name="Timer" type="Timer" parent="OppoAvatar"]
wait_time = 2.0
one_shot = true

[node name="Chat" type="TextureRect" parent="OppoAvatar"]
margin_left = 127.0
margin_right = 487.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 50 )
expand = true

[node name="Label" type="Label" parent="OppoAvatar/Chat"]
margin_left = 30.0
margin_top = 75.0
margin_right = 321.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[node name="LeftAvatar" type="HBoxContainer" parent="."]
visible = false
margin_top = 383.0
margin_right = 460.0
margin_bottom = 614.0
script = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarContainer" type="VBoxContainer" parent="LeftAvatar"]
margin_right = 75.0
margin_bottom = 231.0

[node name="Avatar" type="TextureRect" parent="LeftAvatar/AvatarContainer"]
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 40 )

[node name="Nickname" type="Label" parent="LeftAvatar/AvatarContainer"]
margin_top = 83.0
margin_right = 75.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "昵称"
align = 1

[node name="StateContainer" type="VBoxContainer" parent="LeftAvatar"]
margin_left = 83.0
margin_right = 119.0
margin_bottom = 231.0

[node name="BankerIcon" type="TextureRect" parent="LeftAvatar/StateContainer"]
margin_right = 36.0
margin_bottom = 37.0
texture = ExtResource( 38 )

[node name="ReadyIcon" type="TextureRect" parent="LeftAvatar/StateContainer"]
visible = false
margin_top = 85.0
margin_right = 88.0
margin_bottom = 131.0
texture = ExtResource( 37 )

[node name="OfflineIcon" type="TextureRect" parent="LeftAvatar/StateContainer"]
visible = false
margin_top = 45.0
margin_right = 88.0
margin_bottom = 77.0
rect_min_size = Vector2( 88, 32 )
texture = ExtResource( 39 )
expand = true

[node name="Chat" type="TextureRect" parent="LeftAvatar"]
visible = false
margin_left = 127.0
margin_right = 460.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 46 )
expand = true

[node name="Label" type="Label" parent="LeftAvatar/Chat"]
margin_left = 25.0
margin_top = 23.0
margin_right = 302.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "asd"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="LeftAvatar"]
wait_time = 2.0
one_shot = true

[node name="ChatField" type="HBoxContainer" parent="."]
margin_left = 1364.08
margin_top = 821.17
margin_right = 1897.08
margin_bottom = 872.17
script = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ChatField"]
margin_right = 423.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
placeholder_text = "输入聊天消息"

[node name="SendButton" type="TextureButton" parent="ChatField"]
margin_left = 431.0
margin_right = 533.0
margin_bottom = 51.0
texture_normal = ExtResource( 45 )

[node name="GameResultPanel" type="PopupPanel" parent="."]
margin_left = 493.0
margin_top = 251.0
margin_right = 1426.0
margin_bottom = 751.0
rect_min_size = Vector2( 950, 550 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 53 )

[node name="Nickname0" type="Label" parent="GameResultPanel"]
margin_right = 950.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Nickname1" type="Label" parent="GameResultPanel"]
margin_right = 950.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Nickname2" type="Label" parent="GameResultPanel"]
margin_right = 950.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Nickname3" type="Label" parent="GameResultPanel"]
margin_right = 950.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="DisconnectDialog" type="PopupDialog" parent="."]
margin_right = 600.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 9 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DisconnectDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -122.5
margin_right = 120.0
margin_bottom = 122.5
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisconnectDialog/VBoxContainer"]
margin_right = 240.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "连接已断开"

[node name="ConfirmButton" type="TextureButton" parent="DisconnectDialog/VBoxContainer"]
margin_top = 150.0
margin_right = 240.0
margin_bottom = 225.0
texture_normal = ExtResource( 54 )

[node name="InfoArea" type="HBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 428.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="InfoArea"]
margin_right = 90.0
margin_bottom = 122.0
rect_min_size = Vector2( 90, 122 )
texture_normal = SubResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallIcon" type="TextureRect" parent="InfoArea"]
margin_left = 98.0
margin_right = 177.0
margin_bottom = 122.0
texture = ExtResource( 56 )

[node name="WallCount" type="Label" parent="InfoArea"]
margin_left = 185.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 12 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomIDLabel" type="Label" parent="InfoArea"]
margin_left = 228.0
margin_top = 14.0
margin_right = 403.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 12 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/TestButtons/StartButton" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_righthand_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button5" to="." method="_on_bottomdrop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button6" to="." method="_on_leftdrop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button7" to="." method="_on_rightdrop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button8" to="." method="_on_oppodrop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button9" to="." method="_on_bottomshown_pressed"]
[connection signal="pressed" from="ReadyButton" to="." method="handle_ready_pressed"]
[connection signal="pressed" from="ControlButtons/MusicButton" to="." method="handle_music_button_clicked"]
[connection signal="pressed" from="ControlButtons/SoundButton" to="." method="handle_sound_button_clicked"]
[connection signal="timeout" from="RightAvatar/Timer" to="RightAvatar" method="_on_Timer_timeout"]
[connection signal="timeout" from="OppoAvatar/Timer" to="OppoAvatar" method="_on_Timer_timeout"]
[connection signal="timeout" from="LeftAvatar/Timer" to="LeftAvatar" method="_on_Timer_timeout"]
[connection signal="pressed" from="ChatField/SendButton" to="ChatField" method="_on_SendButton_pressed"]
